--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cantinho Canadense</title>
     <link rel="stylesheet" href="assets/style/style.css">
-    <link rel="shortcut icon" href="assets/img/cc-favicon.png" type="image/x-icon" style="border-radius: 50%">
+    <link rel="shortcut icon" href="assets/img/cc-favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
     <main>
         <div class="title">
             <h1>
-                Olá! Sejam todos bem-vindos ao nosso Plano Canadá! BRCA
+                Olá! Sejam todos bem-vindos ao nosso Plano Canadá! <span class="country">BRCA</span>
             </h1>
         </div>
         <div class="descrition">
@@ -30,7 +30,8 @@
             <a href="https://www.instagram.com/cantinhocanadense/" target="_blank"><img src="assets/img/insta-logo.png" alt="Logo do Instagram"></a>
         </div>
         <div class="subtitle">
-            <h4>OLÁ SOMOS O CANTINHO CANADENSE.</h4>
+            <h4>OLÁ, SOMOS O CANTINHO CANADENSE.</h4>
+            <p>🍁</p>
         </div>
         <article>
             <p>
@@ -41,15 +42,16 @@
         <div class="subtitle">
             <h4>LINKS ÚTEIS</h4>
         </div>
-        <a href="https://open.spotify.com/playlist/6moPoP4ZOMDAhWzOIA7SVZ?si=62fc119ec5d84330&nd=1" target="_blank">
-            <div>
-                <p>Ouçam nossa Playlist no Spotify, ela está maravilhosa.</p>
+            <div class="spotify-btn">
+                <a href="https://open.spotify.com/playlist/6moPoP4ZOMDAhWzOIA7SVZ?si=62fc119ec5d84330&nd=1" target="_blank" id="spotify">
+                    <p>Ouçam nossa Playlist no Spotify, ela está maravilhosa.</p>
+                </a>
             </div>
         </a>
     </main>
-    <footer class="footer-box">
+    <footer>
         <div>
-            <p>Criado por <a href="https://www.linkedin.com/in/vrct/" target="_blank">Vitor Costa</a></p>
+            <p>Criado por <a href="https://www.linkedin.com/in/vrct/" target="_blank"><span>Vitor Costa &reg</span></a></p>
         </div>
     </footer>
 </body>
