flexbox in head

--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <link rel="shortcut icon" href="assets/img/cc-favicon.png" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <div class="container">
+        <h3 class="home-title">
+            Cantinho Canadense
+       </h3>
+       <img class="logo-box" src="assets/img/cc-logo.png" alt="Logo do Cantinho Canadense">
+    </div>
+    <!--<header>
             <h3 class="home-title">
                  Cantinho Canadense
             </h3>
             <img class="logo-box" src="assets/img/cc-logo.png" alt="Logo do Cantinho Canadense">
-    </header>
+    </header>-->
     <main>
         <div class="title">
             <h1>
